DiD S7: slight rebalancing

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -173,27 +173,27 @@
         {NAMED_LOYAL_UNIT 2 (Heavy Infantryman) 24 20 () ( _ "Gate Guard")} {GUARDIAN}
 
         {NAMED_LOYAL_UNIT 2 (Heavy Infantryman) 3 12 () ( _ "City Guard")} {GUARDIAN}
-        {NAMED_LOYAL_UNIT 2 (Shock Trooper) 4 15 () ( _ "City Guard")} {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 (Shock Trooper) 5 15 () ( _ "City Guard")} {GUARDIAN}
 
         # More guards, depending on the difficulty
 #ifdef EASY
         {NAMED_LOYAL_UNIT 2 Mage      7  9 () ( _ "Mage Guard")}  {GUARDIAN}
         {NAMED_LOYAL_UNIT 2 Mage      8  7 () ( _ "Mage Guard")} {GUARDIAN}
-        {NAMED_LOYAL_UNIT 2 Sergeant 6 11 () ( _ "Head Trainer")}   {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 Sergeant 6 13 () ( _ "Head Trainer")}   {GUARDIAN}
 #endif
 
 #ifdef NORMAL
         {NAMED_LOYAL_UNIT 2 Mage      7  9 () ( _ "Mage Guard")}  {GUARDIAN}
         {NAMED_LOYAL_UNIT 2 (Red Mage)   8  7  () ( _ "Mage Guard")} {GUARDIAN}
         {NAMED_LOYAL_UNIT 2 (Heavy Infantryman)   12 16  () ( _ "City Guard")}     {GUARDIAN}
-        {NAMED_LOYAL_UNIT 2 (Lieutenant) 6 11 () ( _ "Head Trainer")}   {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 (Lieutenant) 6 13 () ( _ "Head Trainer")}   {GUARDIAN}
 #endif
 
 #ifdef HARD
         {NAMED_LOYAL_UNIT 2 (White Mage)      7  9 () ( _ "Mage Guard")}  {GUARDIAN}
         {NAMED_LOYAL_UNIT 2 (Red Mage)    8   7 () ( _ "Mage Guard")} {GUARDIAN}
         {NAMED_LOYAL_UNIT 2 (Shock Trooper)     12 16 () ( _ "City Guard")} {GUARDIAN}
-        {NAMED_LOYAL_UNIT 2 (Lieutenant)  6 11 () ( _ "Head Trainer")}   {GUARDIAN}
+        {NAMED_LOYAL_UNIT 2 (Lieutenant)  6 13 () ( _ "Head Trainer")}   {GUARDIAN}
 #endif
 
         [ai]
@@ -651,8 +651,24 @@
 
     [event]
         name=victory
-
-        {VARIABLE S7_turns $turn_number}
+#ifdef EASY
+        [set_variable]
+            name=S7_turns
+            value=$("22 - ($turn_number)")
+        [/set_variable]
+#endif
+#ifdef NORMAL
+        [set_variable]
+            name=S7_turns
+            value=$("20 - ($turn_number)")
+        [/set_variable]
+#endif
+#ifdef HARD
+        [set_variable]
+            name=S7_turns
+            value=$("18 - ($turn_number)")
+        [/set_variable]
+#endif
 
         {MODIFY_UNIT (
             side=1
