DiD S7: minor rebalancing

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -610,6 +610,7 @@
         [/kill]
         [endlevel]
             result=victory
+            linger_mode=no
             bonus=yes
             {NEW_GOLD_CARRYOVER 40}
         [/endlevel]
@@ -644,6 +645,7 @@
 
         [endlevel]
             result=victory
+            linger_mode=no
             bonus=yes
             {NEW_GOLD_CARRYOVER 40}
         [/endlevel]
@@ -651,10 +653,12 @@
 
     [event]
         name=victory
+        
+        {SET_GOT_INSIDE_MANOR}
 #ifdef EASY
         [set_variable]
             name=S7_turns
-            value=$("22 - ($turn_number)")
+            value=$("23 - ($turn_number)")
         [/set_variable]
 #endif
 #ifdef NORMAL
