DiD S8: manor guards deterministic type

--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -187,26 +187,16 @@
         [set_variables]
             name=guardtypetable
             [value]
-                type=Heavy Infantryman
-            [/value]
-            [value]
-                type=Heavy Infantryman
-            [/value]
-            [value]
                 type=Shock Trooper
             [/value]
             [value]
                 type=Spearman
             [/value]
-            [value]
-                type=Spearman
-            [/value]
+#ifndef HARD
             [value]
                 type=Fencer
             [/value]
-            [value]
-                type=Fencer
-            [/value]
+#endif
             [value]
                 type=Duelist
             [/value]
@@ -235,6 +225,21 @@
                 type=Duelist
             [/value]
 #endif
+            [value]
+                type=Heavy Infantryman
+            [/value]
+            [value]
+                type=Heavy Infantryman
+            [/value]
+            [value]
+                type=Spearman
+            [/value]
+            [value]
+                type=Fencer
+            [/value]
+            [value]
+                type=Fencer
+            [/value]
         [/set_variables]
 
         [random_placement]
@@ -252,13 +257,7 @@
                 [/not]
             [/filter_location]
             [command]
-                [set_variable]
-                    name=ind
-                    rand=1..$guardtypetable.length
-                [/set_variable]
-                {VARIABLE_OP ind sub 1}
-                {NAMED_NOTRAIT_UNIT 2 "$guardtypetable[$ind].type" $loc.x $loc.y () (_ "Guard")} {GUARDIAN}
-                {CLEAR_VARIABLE ind}
+                {NAMED_NOTRAIT_UNIT 2 "$guardtypetable[$($loc.n % $guardtypetable.length)].type" $loc.x $loc.y () (_ "Guard")} {GUARDIAN}
             [/command]
         [/random_placement]
 
@@ -268,26 +267,22 @@
                 type=Mage
             [/value]
             [value]
-                type=Mage
-            [/value]
-            [value]
-                type=Mage
-            [/value]
-            [value]
-                type=Mage
-            [/value]
-            [value]
-                type=Mage
-            [/value]
-            [value]
                 type=White Mage
             [/value]
             [value]
+                type=Mage
+            [/value]
+            [value]
                 type=Red Mage
             [/value]
             [value]
                 type=Red Mage
             [/value]
+#ifdef EASY
+            [value]
+                type=Mage
+            [/value]
+#endif
 #ifndef EASY
             [value]
                 type=White Mage
@@ -298,15 +293,21 @@
 #endif
 #ifdef HARD
             [value]
+                type=Red Mage
+            [/value]
+            [value]
                 type=White Mage
             [/value]
+#endif	
             [value]
-                type=Red Mage
+                type=Mage
             [/value]
             [value]
-                type=Red Mage
+                type=Mage
             [/value]
-#endif
+            [value]
+                type=Mage
+            [/value]
         [/set_variables]
 
         [random_placement]
@@ -324,13 +325,7 @@
                 [/not]
             [/filter_location]
             [command]
-                [set_variable]
-                    name=ind
-                    rand=1..$magetypetable.length
-                [/set_variable]
-                {VARIABLE_OP ind sub 1}
-                {GENERIC_UNIT 2 "$magetypetable[$ind].type" $loc.x $loc.y}
-                {CLEAR_VARIABLE ind}
+                {GENERIC_UNIT 2 "$magetypetable[$($loc.n % $magetypetable.length)].type" $loc.x $loc.y}
             [/command]
         [/random_placement]
 #ifdef EASY
@@ -375,7 +370,6 @@
             value=$("10 + ($S7_turns)")
         [/set_variable]
 #endif
-
 
         [recall]
             id=Darken Volk
