--- a/data/game_config.cfg
+++ b/data/game_config.cfg
@@ -4,14 +4,14 @@
         name=_"Official Wesnoth Server"
         address=server.wesnoth.org:15000
     [/server]
-    [server]
-        name=_"Alternate Wesnoth Server"
-        address=server2.wesnoth.org:15000
-    [/server]
-    [server]
-        name=_"Alternate Wesnoth Server"
-        address=server3.wesnoth.org:15000
-    [/server]
+    #[server]
+    #    name=_"Alternate Wesnoth Server"
+    #    address=server2.wesnoth.org:15000
+    #[/server]
+    #[server]
+    #    name=_"Alternate Wesnoth Server"
+    #    address=server3.wesnoth.org:15000
+    #[/server]
 
     base_income=2
     village_income=1
