DiD: modified DV manor death

--- a/data/campaigns/Descent_Into_Darkness/utils/deaths.cfg
+++ b/data/campaigns/Descent_Into_Darkness/utils/deaths.cfg
@@ -63,7 +63,7 @@
 
         [message]
             speaker=unit
-            message= _ "No! I will not fall this close to achieving the goal of so many years!"
+            message= _ "No! I was so close... to achieving my goal... of so many years..."
         [/message]
 
         [endlevel]
@@ -79,22 +79,6 @@
         [message]
             speaker=Darken Volk
             message= _ "Your incompetence at this simple task is appalling. You will never grow strong enough to be of use to me."
-        [/message]
-
-        [endlevel]
-            result=defeat
-        [/endlevel]
-    [/event]
-#enddef
-
-#define TIME_OVER_DEFEAT_MANOR
-    [event]
-        name=time over
-
-        [message]
-            speaker=narrator
-            image=wesnoth-icon.png
-            message= _ "As dawn breaks, the city guards force their way into the manor and capture the two necromancers."
         [/message]
 
         [endlevel]
