DiD S9: undef spawn macros

--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -1085,3 +1085,6 @@ Existence churns and the soul is reborn into endless night.</i>"
     {HERODEATH_MALIN}
     {HERODEATH_VOLK_B}
 [/scenario]
+
+#undef SPAWN_GUARD
+#undef SPAWN_MAGE
