DiD S6: added dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -316,7 +316,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Drogan! With my newfound powers, I have already eliminated two orc chieftains! If you will allow me to help, I will crush the one who comes here as well!"
+            message= _ "Drogan! With my newfound powers, I have already eliminated several orc chieftains! If you will allow me to help, I will crush the one who comes here as well!"
         [/message]
 
         [message]
@@ -448,7 +448,68 @@
         [show_objectives][/show_objectives]
     [/event]
 
+
     # In-scenario Events
+
+    [event]
+        name=recruit,recall
+        [filter]
+            side=1
+            type=Dark Adept DiD,Dark Sorcerer DiD,Necromancer
+        [/filter]
+
+        [if]
+            {DID_RTP_HAS_DROGAN}
+            [then]
+                [message]
+                    speaker=Drogan
+                    message= _ "So, Malin, you have even begun to corrupt our people with your sorcerous ways. Even I did not expect you to stoop low enough to kidnap the villagers and make them into your pawns!"
+                [/message]
+
+                [message]
+                    speaker=unit
+                    message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
+                [/message]
+
+                [message]
+                    speaker=Drogan
+                    message= _ "I understand it well enough to know that it makes all who embrace it evil."
+                [/message]
+
+                [message]
+                    speaker=Malin Keshar
+                    message= _ "There is no point in arguing with one so obstinate. We can only show Drogan the error of his ways through force."
+                [/message]
+            [/then]
+            [else]
+                [message]
+                    speaker=Dela Keshar
+                    message= _ "Malin! First you abandon us to the orcs on your mad quest for necromancy, then you heartlessly murder Drogan, and now... now you even kidnap the villagers and corrupt them with your sorcery! How low have you fallen?"
+                [/message]
+
+                [message]
+                    speaker=unit
+                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
+                [/message]
+
+                [message]
+                    speaker=Dela Keshar
+                    message= _ "Evil? You necromancers defile the bodies of the dead and slaughter the innocent for your sick games. How dare you speak of others as evil! Do you not see the depravity that you have become, Malin?"
+                [/message]
+
+                [message]
+                    speaker=Malin Keshar
+                    message= _ "..."
+                [/message]
+
+                [message]
+                    speaker=Dela Keshar
+                    message= _ "No quip about how we do not understand you? No comment about your moral superiority? Nothing to say at all? I can ony hope you are so quiet when I kill you."
+                [/message]
+            [/else]
+        [/if]
+    [/event]
+
     [event]
         name=moveto
         [filter]
@@ -526,6 +587,7 @@
     # Dela Keshar can't actually die here, she needs to reappear in
     # Alone At Last.  It's not easy to get to this contingency, which
     # is why we settle for a relatively crude fallback here.
+    # This is also an alternative victory condition.
     [event]
         name=last breath
         [filter]
@@ -534,7 +596,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "I am defeated but not dead, foul thing that was once my brother. Watch your back, because I will be coming for you..."
+            message= _ "I am defeated but not dead, foul thing that was once my brother. Watch your back, because I will come for you and I will kill you..."
         [/message]
 
         [move_unit]
@@ -546,6 +608,12 @@
             id=Dela Keshar
             animate=no
         [/kill]
+
+        [endlevel]
+            result=victory
+            bonus=no
+            {NEW_GOLD_CARRYOVER 40}
+        [/endlevel]
     [/event]
 
     # Defeat Conditions
