DiD S2: updated gameplay

--- a/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
@@ -5,7 +5,7 @@
     name= _ "Peaceful Valley"
     map_data="{campaigns/Descent_Into_Darkness/maps/02_Peaceful_Valley.map}"
     victory_when_enemies_defeated=no
-    {TURNS 29 26 23}
+    {TURNS 19 17 15}
     next_scenario=03_A_Haunting_in_Winter
 
     {DEFAULT_SCHEDULE_MORNING}
@@ -33,7 +33,7 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat
-        {GOLD 120 100 80}
+        {GOLD 90 80 70}
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -46,7 +46,7 @@
         facing=nw
 
         [unit]
-            x,y=15,16
+            x,y=15,12
             facing=nw
 
             # wmllint: recognize Darken Volk
@@ -59,7 +59,7 @@
         side=2
         controller=ai
         recruit=Goblin Rouser,Goblin Impaler,Wolf Rider
-        {GOLD 70 90 110}
+        {GOLD 35 50 65}
         team_name=goblins
         user_team_name= _ "Goblins"
         {FLAG_VARIANT6 ragged}
@@ -108,7 +108,7 @@
         [/objectives]
 
         [item]
-            x,y=8,3
+            x,y=8,2
             image=terrain/castle/encampment/tent2.png
         [/item]
     [/event]
@@ -272,10 +272,10 @@
     [/event]
 
     [event]
-        name=moveto
+        name=enter hex
         [filter]
             side=1
-            x,y=15,11
+            x,y=13-19,8-10
         [/filter]
 
         [message]
@@ -289,7 +289,7 @@
         [filter]
             id=Darken Volk,Malin Keshar
             [filter_location]
-                terrain=Ss
+                terrain=Ss,Ss^*,Sm,Sm^*
             [/filter_location]
         [/filter]
 
@@ -299,20 +299,20 @@
         [/message]
 
         [scroll_to]
-            x,y=17,8
+            x,y=19,6
         [/scroll_to]
 
-        {GENERIC_UNIT 1 Ghoul 19 7}
+        {GENERIC_UNIT 1 Ghoul 19 6}
         [+unit]
             facing=sw
         [/unit]
 
-        {GENERIC_UNIT 1 Ghoul 17 9}
+        {GENERIC_UNIT 1 Ghoul 20 5}
         [+unit]
             facing=sw
         [/unit]
 
-        {GENERIC_UNIT 1 Ghoul 17 8}
+        {GENERIC_UNIT 1 Ghoul 20 6}
         [+unit]
             facing=sw
         [/unit]
