--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -482,6 +482,36 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/clear_variable]
 #enddef
 
+#define LEADER_JOINS_BATTLE SIDE
+    # The dwarf, magi, & elf sides are far away, so have the leaders
+    # join the battle when recruiting is finished. This saves the player
+    # from spending time to chase them down at the end of the battle.
+    [event]
+        name=side {SIDE} turn
+        first_time_only=no
+        [store_gold]
+            side={SIDE}
+        [/store_gold]
+        [if]
+            [variable]
+                name=gold
+                less_than_equal_to=15 # Doesn't have to be 0, just less than the cheapest recruit
+            [/variable]
+            [then]
+                [modify_side]
+                    side={SIDE}
+                    [ai]
+                        leader_ignores_keep=yes
+                    [/ai]
+                [/modify_side]
+            [/then]
+        [/if]
+        [clear_variable]
+            name=gold
+        [/clear_variable]
+    [/event]
+#enddef
+
     # *************************** PRESTART ***************************
     [event]
         name=prestart
@@ -578,6 +608,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/modify_side]
 
         {ADD_EXTRA_STARTING_UNITS 4}
+        {LEADER_JOINS_BATTLE 4}
 
         [message]
             speaker=Ras-Tabahn
@@ -658,6 +689,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/modify_side]
 
         {ADD_EXTRA_STARTING_UNITS 5}
+        {LEADER_JOINS_BATTLE 5}
 
         [message]
             speaker=Ardonna
@@ -722,6 +754,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/modify_side]
 
         {ADD_EXTRA_STARTING_UNITS 6}
+        {LEADER_JOINS_BATTLE 6}
 
         [message]
             speaker=Ardonna
