DiD S6: typo/dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -468,7 +468,8 @@
 
                 [message]
                     speaker=unit
-                    message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
+                    male_message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
+                    female_message= _ "female^I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
                 [/message]
 
                 [message]
@@ -489,7 +490,8 @@
 
                 [message]
                     speaker=unit
-                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
+                    male_message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
+                    female_message= _ "female^I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
                 [/message]
 
                 [message]
@@ -504,7 +506,7 @@
 
                 [message]
                     speaker=Dela Keshar
-                    message= _ "No quip about how we do not understand you? No comment about your moral superiority? Nothing to say at all? I can ony hope you are so quiet when I kill you."
+                    message= _ "No quip about how we do not understand you? No comment about your moral superiority? Nothing to say at all? I can only hope you are so quiet when I kill you."
                 [/message]
             [/else]
         [/if]
